src/app/globals.css
@import "tailwindcss";
@import "tw-animate-css";

@custom-variant dark (&:is(.dark *));

:root {
  --radius: 1rem;
  --background: oklch(1 0 0);
  --foreground: oklch(0.141 0.005 285.823);
  --card: oklch(1 0 0);
  --card-foreground: oklch(0.141 0.005 285.823);
  --popover: oklch(1 0 0);
  --popover-foreground: oklch(0.141 0.005 285.823);
  --primary: oklch(0.623 0.214 259.815);
  --primary-foreground: oklch(0.97 0.014 254.604);
  --secondary: oklch(0.967 0.001 286.375);
  --secondary-foreground: oklch(0.21 0.006 285.885);
  --muted: oklch(0.967 0.001 286.375);
  --muted-foreground: oklch(0.552 0.016 285.938);
  --accent: oklch(0.967 0.001 286.375);
  --accent-foreground: oklch(0.21 0.006 285.885);
  --destructive: oklch(0.577 0.245 27.325);
  --border: oklch(0.92 0.004 286.32);
  --input: oklch(0.92 0.004 286.32);
  --ring: oklch(0.623 0.214 259.815);
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.141 0.005 285.823);
  --sidebar-primary: oklch(0.623 0.214 259.815);
  --sidebar-primary-foreground: oklch(0.97 0.014 254.604);
  --sidebar-accent: oklch(0.967 0.001 286.375);
  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
  --sidebar-border: oklch(0.92 0.004 286.32);
  --sidebar-ring: oklch(0.623 0.214 259.815);
}

.dark {
  --background: oklch(0.141 0.005 285.823);
  --foreground: oklch(0.985 0 0);
  --card: oklch(0.21 0.006 285.885);
  --card-foreground: oklch(0.985 0 0);
  --popover: oklch(0.21 0.006 285.885);
  --popover-foreground: oklch(0.985 0 0);
  --primary: oklch(0.546 0.245 262.881);
  --primary-foreground: oklch(0.379 0.146 265.522);
  --secondary: oklch(0.274 0.006 286.033);
  --secondary-foreground: oklch(0.985 0 0);
  --muted: oklch(0.274 0.006 286.033);
  --muted-foreground: oklch(0.705 0.015 286.067);
  --accent: oklch(0.274 0.006 286.033);
  --accent-foreground: oklch(0.985 0 0);
  --destructive: oklch(0.704 0.191 22.216);
  --border: oklch(1 0 0 / 10%);
  --input: oklch(1 0 0 / 15%);
  --ring: oklch(0.488 0.243 264.376);
  --chart-1: oklch(0.488 0.243 264.376);
  --chart-2: oklch(0.696 0.17 162.48);
  --chart-3: oklch(0.769 0.188 70.08);
  --chart-4: oklch(0.627 0.265 303.9);
  --chart-5: oklch(0.645 0.246 16.439);
  --sidebar: oklch(0.21 0.006 285.885);
  --sidebar-foreground: oklch(0.985 0 0);
  --sidebar-primary: oklch(0.546 0.245 262.881);
  --sidebar-primary-foreground: oklch(0.379 0.146 265.522);
  --sidebar-accent: oklch(0.274 0.006 286.033);
  --sidebar-accent-foreground: oklch(0.985 0 0);
  --sidebar-border: oklch(1 0 0 / 10%);
  --sidebar-ring: oklch(0.488 0.243 264.376);
}



@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}


/* @theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --color-sidebar-ring: var(--sidebar-ring);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar: var(--sidebar);
  --color-chart-5: var(--chart-5);
  --color-chart-4: var(--chart-4);
  --color-chart-3: var(--chart-3);
  --color-chart-2: var(--chart-2);
  --color-chart-1: var(--chart-1);
  --color-ring: var(--ring);
  --color-input: var(--input);
  --color-border: var(--border);
  --color-destructive: var(--destructive);
  --color-accent-foreground: var(--accent-foreground);
  --color-accent: var(--accent);
  --color-muted-foreground: var(--muted-foreground);
  --color-muted: var(--muted);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-secondary: var(--secondary);
  --color-primary-foreground: var(--primary-foreground);
  --color-primary: var(--primary);
  --color-popover-foreground: var(--popover-foreground);
  --color-popover: var(--popover);
  --color-card-foreground: var(--card-foreground);
  --color-card: var(--card);
  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  container: {
    center: true;
    padding: 2rem;

    screens: {
      2xl: 1400px;
    }
  }

  colors: {
    border: "oklch(var(--border))";
    input: "oklch(var(--input))";
    ring: "oklch(var(--ring))";
    background: "oklch(var(--background))";
    foreground: "oklch(var(--foreground))";

    primary: {
      DEFAULT: "oklch(var(--primary))";
      foreground: "oklch(var(--primary-foreground))";
    }

    secondary: {
      DEFAULT: "oklch(var(--secondary))";
      foreground: "oklch(var(--secondary-foreground))";
    }

    destructive: {
      DEFAULT: "oklch(var(--destructive))";
      foreground: "oklch(var(--destructive-foreground))";
    }

    muted: {
      DEFAULT: "oklch(var(--muted))";
      foreground: "oklch(var(--muted-foreground))";
    }

    accent: {
      DEFAULT: "oklch(var(--accent))";
      foreground: "oklch(var(--accent-foreground))";
    }

    popover: {
      DEFAULT: "oklch(var(--popover))";
      foreground: "oklch(var(--popover-foreground))";
    }

    card: {
      DEFAULT: "oklch(var(--card))";
      foreground: "oklch(var(--card-foreground))";
    }
  }

  borderRadius: {
    lg: "var(--radius)";
    md: "calc(var(--radius) - 2px)";
    sm: "calc(var(--radius) - 4px)";
  }

  keyframes: {
    "accordion-down": {
      from: {
        height: "0"
      }

      ;

      to: {
        height: "var(--radix-accordion-content-height)"
      }

      ;
    }

    "accordion-up": {
      from: {
        height: "var(--radix-accordion-content-height)"
      }

      ;

      to: {
        height: "0"
      }

      ;
    }
  }

  animation: {
    accordion-down: accordion-down 0.2s ease-out;
    accordion-up: accordion-up 0.2s ease-out;
  }
} */

/* @layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
  }
} */

.fade-layer {
  mask-image: linear-gradient(to top,
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 1) 20%,
      rgba(0, 0, 0, 1) 80%,
      rgba(0, 0, 0, 0));
}

.fade-layer--size {
  mask-image: linear-gradient(to left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 1) 20%);
}

.text-radial {
  background-image: radial-gradient(ellipse farthest-side,
      rgba(115, 32, 221, 0.2) 20%,
      transparent 85%);
  background-size: 100% 100%;
  background-position: center;
  background-repeat: no-repeat;
}

.snippet--gradient {
  background-image: linear-gradient(to bottom,
      rgba(0, 0, 0, 0),
      rgba(23, 23, 23, 1));
}

@keyframes accordion-down {
  from {
    height: 0;
  }

  to {
    height: var(--radix-accordion-content-height);
  }
}

@keyframes accordion-up {
  from {
    height: var(--radix-accordion-content-height);
  }

  to {
    height: 0;
  }
}

.animation-accordion-down {
  animation: accordion-down 0.2s ease-out;
}

.animation-accordion-up {
  animation: accordion-up 0.2s ease-out;
}



/* Add this to your global CSS file */
.animated-border {
  position: relative;
  transition: border-color 0.3s, box-shadow 0.3s;
  border: 2px solid transparent;
}

.animated-border.liked {
  border-color: #3ea6ff;
  /* YouTube blue */
  box-shadow: 0 0 0 4px rgba(62, 166, 255, 0.2);
  animation: border-pop 0.4s cubic-bezier(0.4, 0, 0.2, 1);
}

@keyframes border-pop {
  0% {
    border-width: 2px;
    box-shadow: 0 0 0 0 rgba(62, 166, 255, 0.2);
  }

  50% {
    border-width: 4px;
    box-shadow: 0 0 0 8px rgba(62, 166, 255, 0.15);
  }

  100% {
    border-width: 2px;
    box-shadow: 0 0 0 4px rgba(62, 166, 255, 0.2);
  }
}

